# docs/swagger.yaml
@@ -5,10 +5,6 @@ definitions:
         description: Optional field for creation timestamp
         example: "2023-10-01T12:00:00Z"
         type: string
-      json_value:
-        additionalProperties:
-          type: string
-        type: object
       name:
         example: app_config
         type: string
@@ -17,8 +13,9 @@ definitions:
         example: 0
         type: integer
       value:
-        example: config_value
-        type: string
+        additionalProperties:
+          type: string
+        type: object
       version:
         example: 1
         type: integer
@@ -38,18 +35,14 @@ definitions:
     type: object
   http.putConfigurationRequestJson:
     properties:
-      json_value:
-        additionalProperties:
-          type: string
-        type: object
       type:
         example: config_type
         type: string
       value:
-        example: config_value
-        type: string
+        additionalProperties:
+          type: string
+        type: object
     required:
-    - json_value
     - type
     - value
     type: object
