# internal/adapter/handler/http/configuration.go
@@ -23,9 +23,8 @@ type putConfigurationRequestUri struct {
 }
 
 type putConfigurationRequestJson struct {
-	Type      string                 `json:"type" binding:"required" example:"config_type"`
-	Value     string                 `json:"value" binding:"required" example:"config_value"`
-	JsonValue map[string]interface{} `json:"json_value" swaggertype:"object,string" binding:"required"`
+	Type  string                 `json:"type" binding:"required" example:"config_type"`
+	Value map[string]interface{} `json:"value" swaggertype:"object,string" binding:"required"`
 }
 
 // PutConfiguration godoc
@@ -62,9 +61,8 @@ func (ch *ConfigurationHandler) PutConfiguration(ctx *gin.Context) {
 	}
 
 	config := &domain.Config{
-		Name:      reqUri.Name,
-		Value:     reqJson.Value,
-		JsonValue: reqJson.JsonValue,
+		Name:  reqUri.Name,
+		Value: reqJson.Value,
 	}
 
 	createdConfig, err := ch.svc.PutConfiguration(ctx, config)
