# internal/adapter/handler/http/response.go
@@ -45,8 +45,7 @@ func newMeta(total, limit, skip uint64) meta {
 
 type configurationResponse struct {
 	Name              string                 `json:"name" example:"app_config"`
-	Value             string                 `json:"value" example:"config_value"`
-	JsonValue         map[string]interface{} `json:"json_value" swaggertype:"object,string"`
+	Value             map[string]interface{} `json:"value" swaggertype:"object,string"`
 	Version           int                    `json:"version" example:"1"`
 	RollbackedVersion int                    `json:"rollbacked_version,omitempty" example:"0"`            // Optional field for copied version
 	CreatedAt         time.Time              `json:"created_at,omitempty" example:"2023-10-01T12:00:00Z"` // Optional field for creation timestamp
@@ -56,7 +55,6 @@ func newConfigResponse(config *domain.Config) configurationResponse {
 	return configurationResponse{
 		Name:              config.Name,
 		Value:             config.Value,
-		JsonValue:         config.JsonValue,
 		Version:           config.Version,
 		RollbackedVersion: config.RollbackedVersion,
 		CreatedAt:         config.CreatedAt,
